# citybikes-pipeline

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  gcp.env  pyproject.toml
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: citybikes_cloud_pipeline  citybikes_pipeline.py
dbt/: citybikes.duckdb  dbt_project.yml
dbt/macros/: create_external_raw_data.sql  get_raw_data.sql
dbt/models/marts/: mart_city_aggregations.sql  mart_city_comparison.sql  mart_city_hourly_trends.sql  mart_station_ranking.sql  mart_station_utilization.sql  mart_weekly_trends.sql
dbt/models/staging/: schema.yml  stg_stations.sql
dbt/profiles/: .user.yml  profiles.yml
docs/: RUNNING_AIRFLOW.md  architecture.md  decisions.md  progress.md  structure.md
ingestion/: client.py  extractor.py  loader.py  schemas.py
scripts/: create_service_account_key.py  generate_gcp_env.py  generate_sample_data.py  historical_load.py  run_ingestion.py
storage/: __init__.py  gcs.py  interface.py  local.py
terraform/: .terraform.lock.hcl  README.md  main.tf  main.tf.bak  outputs.tf  terraform.tfvars.example  variables.tf
terraform/modules/bigquery/: main.tf  outputs.tf  variables.tf
terraform/modules/bigquery_external_table/: main.tf  outputs.tf  variables.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/compute_vm/: main.tf  outputs.tf  startup_script.sh.tpl  variables.tf
terraform/modules/gcs/: main.tf  outputs.tf  variables.tf
tests/: test_ingestion.py  test_storage.py
(+4 files in other folders)
