[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "citybikes-pipeline"
version = "0.1.0"
description = "End-to-end data pipeline for CityBikes API"
readme = "README.md"
authors = [
    {name = "Waleed", email = "user@example.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.5.0",
    "tenacity>=8.2.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
]
storage = [
    "google-cloud-storage>=2.10.0",
    "duckdb>=0.9.0",
]
dbt = [
    "dbt-core>=1.7.0",
    "dbt-duckdb>=1.7.0",
    "dbt-bigquery>=1.7.0",
]

[project.urls]
repository = "https://github.com/WaleedHashmi2310/citybikes-pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["ingestion*", "storage*", "warehouse*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
line_length = 88